--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: debugging
         env:
-          SOMETHING: "${{steps.release.outputs"
+          SOMETHING: "${{steps.release.outputs}}"
         run: |
           "echo $SOMETHING"
 
