--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -20,8 +20,8 @@ jobs:
           SOMETHING: ${{steps.release.outputs.release_created}}
           RUBY_VERSION: ${{env.RUBY_VERSION}}
         run: |
-          "echo $SOMETHING"
-          "echo $RUBY_VERSION"
+          echo $SOMETHING
+          echo $RUBY_VERSION
 
       - uses: actions/checkout@v2
         if: ${{ steps.release.outputs.release_created }}
