--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,4 +32,5 @@ jobs:
       - name: publish gem
         uses: dawidd6/action-publish-gem@v1
         with:
+          api_key: ''
           github_token: ${{secrets.GITHUB_TOKEN}}
