add rubygems api key back in

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,6 @@ jobs:
       - name: publish gem
         uses: dawidd6/action-publish-gem@v1
         with:
-          api_key: ''
+          api_key: ${{secrets.RUBYGEMS_API_KEY}}
           github_token: ${{secrets.GITHUB_TOKEN}}
         if: ${{ steps.release.outputs.release_created }}
