--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,11 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v3
         id: release
-      - uses: actions/checkout@v3
         with:
           release-type: ruby
           package-name: "${{ env.GEM_NAME }}"
-      - name: remove Gemfile.lock # avoids bundle problems
+      - uses: actions/checkout@v3
+      - name: remove Gemfile.lock
         if: "${{ steps.release.outputs.release_created }}"
         run: |
           rm Gemfile.lock
