--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
           - 3.2.0
     steps:
       - uses: actions/checkout@v3
+      - name: remove Gemfile.lock
+        run: |
+          rm Gemfile.lock
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
