--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,14 +6,12 @@ name: release
 jobs:
   release-please:
     runs-on: ubuntu-latest
-    env:
-      GEM_NAME: mm-simple_version
     steps:
-      - uses: google-github-actions/release-please-action@v4
+      - uses: googleapis/release-please-action@v4.3.0
         id: release
         with:
-          release-type: ruby
-          package-name: "${{ env.GEM_NAME }}"
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
       - uses: actions/checkout@v5
       - name: remove Gemfile.lock
         if: "${{ steps.release.outputs.release_created }}"
